tests/ui/type-alias-impl-trait/coherence/coherence-treats-tait-ambig.stderr
error[E0119]: conflicting implementations of trait `Into<_>` for type `Foo`
  --> $DIR/coherence-treats-tait-ambig.rs:7:1
   |
LL | impl Into<T> for Foo {
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T, U> Into<U> for T
             where U: From<T>;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
